# kokoro-tiny

./: .gitignore  AUDIO_TRINITY_VISION.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PHOENIX_PROTOCOL_OPPORTUNITIES.md  README.md  SPEECH_IMPROVEMENTS.md  VOICE_STYLE_SELECTION.md  build.rs  libtest_cfg.rlib  test_espeak.rs
.claude/: settings.local.json
.github/workflows/: ci.yml
assets/emosion/: README.md
examples/: all_voices.rs  audio_formats.rs  baby_speech.rs  debug_tokens.rs  debug_words.rs  demo_fix.rs  device_select.rs  hello_family.rs  list_devices.rs  mcp_example.rs  mem8_baby.rs  short_phrase.rs  simple.rs  story_time.rs  test_alerts.rs  test_american.rs  test_backwards_compat.rs  test_devices.rs  test_english.rs  test_v2_punctuation.rs  test_voice_styles.rs  test_voices.rs  unlimited_speech.rs
src/: lib.rs  main.rs  mcp_server.rs  mem8_bridge.rs  mem8_voice.rs  streaming.rs
